CostalCloud/force-app/main/default/objects/HVAC__c.object
<CustomObject>
    <fields>
        <fullName>Ceiling_Height_Fraction__c</fullName>
        <label>Ceiling Height Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ceiling_Height__c</fullName>
        <label>Ceiling Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ceiling_to_Register_Fraction__c</fullName>
        <label>Ceiling to Register Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ceiling_to_Register__c</fullName>
        <label>Ceiling to Register</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>HVAC</relationshipLabel>
        <relationshipName>HVAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HVAC_Measurement_Image__c</fullName>
        <label>HVAC Measurement Image</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HVAC_Notes__c</fullName>
        <label>HVAC Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HVAC_Photo__c</fullName>
        <label>HVAC Photo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reg_H_From_Floor_Fraction__c</fullName>
        <label>Reg H From Floor Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reg_H_From_Floor__c</fullName>
        <label>Reg H From Floor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reg_to_L_Wall_Fraction__c</fullName>
        <label>Reg to L Wall Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reg_to_L_Wall__c</fullName>
        <label>Reg to L Wall</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reg_to_R_Wall_Fraction__c</fullName>
        <label>Reg to R Wall Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reg_to_R_Wall__c</fullName>
        <label>Reg to R Wall</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Register_Height_Fraction__c</fullName>
        <label>Register Height Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Register_Height__c</fullName>
        <label>Register Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Register_W_Fraction__c</fullName>
        <label>Register W Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fraction_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Register_W__c</fullName>
        <label>Register W</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wall</label>
        <referenceTo>Walls__c</referenceTo>
        <relationshipLabel>HVAC</relationshipLabel>
        <relationshipName>HVAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HVAC</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>HVAC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HVAC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>